--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
     "reactotron-react-native": "^4.0.3",
     "styled-components": "^5.0.1"
