--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-youtube": "^2.0.0",
     "reactotron-react-native": "^4.0.3",
     "styled-components": "^5.0.1"
   },
